# c_reqwest_ffi

./: .gitignore  Cargo.toml  libreqwest.h
src/: lib.rs
vc_test/test/: test.cpp  test.sln  test.vcxproj
