[package]
name = "c_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="reqwest"
crate-type=["staticlib"]

[dependencies]
tokio = {version="1",features=["full"]}
slab = "0.4"
reqwest= { version = "0.11" , default-features=false, features = ["stream","rustls-tls"]}
